# fluvio

./: .dockerignore  .gitignore  .turbo.toml  CHANGELOG.md  CODE-OF-CONDUCT.MD  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  INSTALL.md  Makefile  Makefile.toml  README.md  RELEASE.md  VERSION  action.yaml  bors.toml  cliff.toml  cloud.txt  connect.yaml  deny.toml  install.sh  justfile  rust-toolchain  rust-toolchain.toml  rustfmt.toml  table-example.yaml  toolchain.toml  wasm.make
api/sc-api/: Cargo.toml
api/sc-api/src/: flv_create_spu_groups.rs  flv_create_topics.rs  flv_delete_spu_groups.rs  flv_delete_topics.rs  flv_fetch_topics.rs  lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  root_cli.rs
cli/src/advanced/: generate.rs  mod.rs  request_api.rs  run.rs
cli/src/common/: connection.rs  describe_hdlr.rs  endpoint.rs  hex_dump.rs  output_hdlr.rs  send_request.rs
cli/src/consume/: cli.rs  mod.rs
cli/src/error/: error.rs
cli/src/profile/: config.rs  mod.rs  profile_file.rs
cli/test-data/group-cfg/: valid_config.json
cli/test-data/input-files/: json-file.json  text-file.txt
cli/test-data/profiles/: default.toml  invalid.toml
cli/test-data/topics/: out_of_order.json
cloud/sc-extra/: Cargo.toml  README.md
cloud/sc-extra/src/: lib.rs  req.rs
connector/cargo_template/: .gitignore  Cargo.toml  Cargo.toml.liquid  Connector.toml  README.md  cargo-generate.toml  config-example.yaml  sample-config.yaml
connector/cargo_template/src/: config.rs  main.rs
connector/json-test-connector/: Cargo.toml  Connector.toml  README.md  config-example.yaml  sample-config-v2.yaml  sample-config.yaml  sample-config2-v2.yaml
connector/json-test-connector/src/: common.rs  main.rs  source.rs
connector/sink-test-connector/: Cargo.toml  Connector.toml  README.md  config-example.yaml  sample-config-v2.yaml  sample-config.yaml  secrets.txt
connector/sink-test-connector/src/: main.rs  sink.rs
crates/cargo-builder/: Cargo.toml
crates/cargo-builder/src/: build.rs  cargo.rs  lib.rs  package.rs
crates/cdk/: Cargo.toml  build.rs
crates/cdk/src/: build.rs  cmd.rs  deploy.rs  generate.rs  hub.rs  main.rs  publish.rs  set_public.rs  test.rs  utils.rs  version.rs
crates/fluvio-auth/: Cargo.toml  README.md
crates/fluvio-auth/src/: basic.rs  error.rs  lib.rs  policy.rs  remote.rs  root.rs
crates/fluvio-benchmark/: Cargo.toml  Makefile
crates/fluvio-benchmark/benches/: producer_consumer.rs  single_producer_consumer_benchmark.yaml
crates/fluvio-benchmark/src/: bench_env.rs  benches.rs  benchmark_driver.rs  cli.rs  config.rs  consumer.rs  consumer_worker.rs  content.rs  fluvio_control.rs  latency.rs  lib.rs  main.rs  producer.rs  producer_benchmark.rs  producer_worker.rs  sample.rs  stats.rs  stats_collector.rs  throughput.rs  utils.rs
crates/fluvio-channel/: Cargo.toml
crates/fluvio-channel-cli/: Cargo.toml
crates/fluvio-channel-cli/src/: lib.rs
crates/fluvio-channel-cli/tests/: issue_2168_regression.rs  pinned_version_channel.rs
crates/fluvio-channel/src/: lib.rs
crates/fluvio-cli/: Cargo.toml  README.md  build.rs
crates/fluvio-cli-common/: Cargo.toml  build.rs
crates/fluvio-cli-common/src/: error.rs  http.rs  install.rs  lib.rs  profile.rs  smartmodule.rs  user_input.rs  version_cmd.rs
crates/fluvio-cli/src/: diagnostics.rs  error.rs  lib.rs  metadata.rs  monitoring.rs  render.rs  uninstall.rs  version.rs
crates/fluvio-cli/templates/: Cargo.toml  cargo-generate.toml
crates/fluvio-cli/test-data/: test-config.yaml  test-tableformat-config.yaml
crates/fluvio-cluster/: Cargo.toml  build.rs  cli_command_notes.md
crates/fluvio-cluster/src/: delete.rs  error.rs  lib.rs  progress.rs  render.rs
crates/fluvio-cluster/test-data/: metadata.json  test-config.yaml
crates/fluvio-compression/: Cargo.toml  README.md
crates/fluvio-compression/src/: error.rs  gzip.rs  lib.rs  lz4.rs  snappy.rs  zstd.rs
crates/fluvio-connector-common/: Cargo.toml
crates/fluvio-connector-common/src/: config.rs  consumer.rs  lib.rs  monitoring.rs  producer.rs  secret.rs  smartmodule.rs
crates/fluvio-connector-common/ui-test/: mod.rs
crates/fluvio-connector-deployer/: Cargo.toml
crates/fluvio-connector-deployer/src/: lib.rs  local.rs
future-aio/: Cargo.toml
future-aio/src/: io_util_1.rs  io_util_3.rs  lib.rs  write.rs  zero_copy.rs
future-aio/src/compat/: sink.rs
future-aio/src/fs/: async_file.rs  bounded.rs  file_01.rs  file_slice.rs  mmap.rs  mod.rs  shared_file.rs  sink.rs  stream.rs
future-aio/src/net/: mod.rs  tcp_stream_1.rs  tcp_stream_3.rs
future-helper/: Cargo.toml
future-helper-03/: Cargo.toml
future-helper-03/async-test-derive/: Cargo.toml
future-helper-03/async-test-derive/src/: lib.rs
future-helper-03/src/: lib.rs
future-helper/async-test-derive/: Cargo.toml
future-helper/src/: lib.rs  util.rs
k8-client/: Cargo.toml  Makefile  README.md
k8-client/k8-fixtures/: Cargo.toml
k8-client/src/: client.rs  config.rs  error.rs  fixture.rs  lib.rs  pod.rs  secret.rs  service.rs  stateful.rs  wstream.rs
k8-client/tests/: service.rs  stateful.rs  topic-stream.rs  topic.rs
k8-metadata/: Cargo.toml
k8-metadata/metadata-auth-token/: Cargo.toml
k8-metadata/metadata-core/: Cargo.toml
k8-metadata/metadata-partition/: Cargo.toml
k8-metadata/metadata-spg/: Cargo.toml
k8-metadata/metadata-spu/: Cargo.toml
k8-metadata/metadata-topic/: Cargo.toml
k8-metadata/src/: lib.rs
kf-service/: Cargo.toml
kf-service/src/: kf_server.rs  lib.rs  test_request.rs
kf-socket/: Cargo.toml
kf-socket/src/: backflow.rs  file_fetch.rs  lib.rs  pooling.rs  sink.rs  sink_pool.rs  socket.rs  stream.rs
sc-server/: Cargo.toml
sc-server/src/: error.rs  init.rs  lib.rs  main.rs
spu-server/: Cargo.toml  README.md
spu-server/src/: lib.rs  main.rs  start.rs
storage/: Cargo.toml
storage/src/: batch.rs  batch_header.rs  checkpoint.rs  error.rs  fixture.rs  index.rs  mut_index.rs  mut_records.rs  range_map.rs  records.rs  replica.rs  segment.rs  util.rs  validator.rs
storage/tests/: replica_test.rs
test-helper/: Cargo.toml
(+4589 files in other folders)
