[workspace]
exclude = ["smartmodule/regex-filter"]
members = [
    "examples/00-produce",
    "examples/01-produce-key-value",
    "examples/01-produce-batch",
    "examples/02-consume",
    "examples/03-echo",
    "examples/04-admin-watch",
    "crates/fluvio",
    "crates/fluvio-auth",
    "crates/fluvio-benchmark",
    "crates/fluvio-channel",
    "crates/fluvio-channel-cli",
    "crates/fluvio-cli",
    "crates/fluvio-cli-common",
    "crates/fluvio-cluster",
    "crates/fluvio-compression",
    "crates/fluvio-controlplane",
    "crates/fluvio-controlplane-metadata",
    "crates/fluvio-hub-util",
    "crates/fluvio-hub-protocol",
    "crates/fluvio-extension-common",
    "crates/fluvio-kv-storage",
    "crates/fluvio-package-index",
    "crates/fluvio-protocol",
    "crates/fluvio-protocol-derive",
    "crates/fluvio-run",
    "crates/fluvio-sc",
    "crates/fluvio-sc-schema",
    "crates/fluvio-service",
    "crates/fluvio-smartmodule",
    "crates/fluvio-smartmodule-derive",
    "crates/fluvio-smartengine",
    "crates/fluvio-socket",
    "crates/fluvio-spu",
    "crates/fluvio-spu-schema",
    "crates/fluvio-storage",
    "crates/fluvio-stream-dispatcher",
    "crates/fluvio-stream-model",
    "crates/fluvio-test",
    "crates/fluvio-test-derive",
    "crates/fluvio-test-case-derive",
    "crates/fluvio-test-util",
    "crates/fluvio-types",
    "crates/fluvio-version-manager",
    "crates/fluvio-connector-package",
    "crates/fluvio-connector-deployer",
    "crates/fluvio-connector-common",
    "crates/fluvio-connector-derive",
    "release-tools/check-crate-version",
    "release-tools/check-crate-version/toml-diff",
    "crates/smartmodule-development-kit",
    "crates/cdk",
    "crates/cargo-builder",
    "connector/json-test-connector",
    "connector/sink-test-connector",
]
resolver = "2"

[workspace.dependencies]
adaptive_backoff = "0.2.1"
anyhow = "1.0.86"
async-channel = { version = "1.9.0", default-features = false }
async-io = "2.3.3"
async-lock = "3.4.0"
async-std = { version = "1.8.0", default-features = false }
async-trait = { version = "0.1.41", default-features = false }
base64 = "0.22.0"
bytes = "1.7.2"
bytesize = "1.1.0"
cargo_toml = "0.20.3"
cargo-generate = { version = "0.21", default-features = false }
cfg-if = "1.0.0"
chrono = { version = "0.4.23", default-features = false }
clap = { version = "4.0.10", default-features = false }
clap_complete = "4.0.2"
color-eyre = { version = "0.6.0", default-features = false }
colored = "2.0.0"
comfy-table = { version = "7.0.1", default-features = false }
const_format = { version = "0.2" }
content_inspector = { version = "0.2" }
crc32c = { version = "0.6"}
criterion = "0.5.0"
crossbeam-channel = "0.5"
crossterm = { version = "0.27.0", default-features = false}
ctrlc = { version = "3.1.3" }
current_platform = { version = "0.2" }
derive_builder = "0.20.0"
dialoguer = "0.11.0"
directories = "5.0.0"
dirs = "5.0.0"
duct = { version = "0.13", default-features = false }
enum-display = "0.1.3"
event-listener = "5.3.1"
eyre = { version = "0.6", default-features = false }
flate2 = { version = "1.0.25" }
futures = { version = "0.3.1" }
futures-channel = "0.3"
futures-lite = "2.3.0"
futures-util = { version = "0.3.6", default-features = false }
getrandom = "0.2.15"
handlebars = "5.1.2"
hdrhistogram = "7.0"
hex = "0.4"
home = "0.5"
http = { default-features = false, version = "1.1.0" }
humantime = "2.0"
humantime-serde = { version = "1.1.1", default-features = false }
include_dir = "0.7.2"
indicatif = "0.17.0"
inventory = "0.3"
madato = "0.7.0"
mimalloc = "0.1.39"
mime = "0.3"
nix = { version = "0.29.0", default-features = false }
once_cell = "1.20.2"
parking_lot = { version = "0.12.3", default-features = false }
pin-project = "1.1.0"
portpicker = "0.1.1"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
regex = "1.7"
reqwest = "0.12"
semver = "1.0.13"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.60"
serde-tuple-vec-map = "1.0.1"
serde_yaml = { version = "0.9.0", default-features = false }
sha2 = { version = "0.10" }
siphasher = "1.0.0"
static_assertions = "1.1.0"
syn = "2.0"
sysinfo = { version = "0.31.4", default-features = false, features = ["system"] }
tar = { version = "0.4.38", default-features = false }
tempfile = "3.4.0"
thiserror = "1.0.30"
tokio = { version =  "1.34.0", default-features = false }
tokio-util = { version = "0.7.0", default-features = false }
toml = { version = "0.8.0", default-features = false }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", default-features = false }
tui = { version = "0.19.0", default-features = false }
ureq = { version = "=2.9.7", default-features = false, features = ["tls", "http-crate", "native-certs", "brotli"] }
url = "2.5"
uuid = { version = "1.1", features = ["serde", "v4"] }
wasm-bindgen-test = "0.3.24"
wasi-common = { version = "25.0.0" }
wasmtime = { version = "25.0.0" }
wasmparser = "0.212.0"
which = "6.0.1"
x509-parser = "0.16.0"

# External fluvio dependencies
fluvio_ws_stream_wasm = "0.7.0"
fluvio-command = { version = "0.2.0" }
fluvio-future = { version = "0.7.0", default-features = false }
fluvio-helm = { version = "0.4.1" }
flv-tls-proxy = { version = "0.9.0" }
flv-util = { version = "0.5.2", default-features = false }
k8-client = { version = "13.1.0" }
k8-config = { version = "2.3.0" }
k8-types =  { version = "0.8.7" }
k8-diff = { version = "0.1.2" }
trybuild = { branch = "check_option", git = "https://github.com/infinyon/trybuild" }

# Internal fluvio dependencies
fluvio = { version = "0.23.3", path = "crates/fluvio" }
fluvio-auth = { path = "crates/fluvio-auth" }
fluvio-channel = { path = "crates/fluvio-channel" }
fluvio-cli-common = { path = "crates/fluvio-cli-common"}
fluvio-compression = { version = "0.3.2", path = "crates/fluvio-compression", default-features = false }
fluvio-connector-package = { path = "crates/fluvio-connector-package/" }
fluvio-controlplane = { path = "crates/fluvio-controlplane" }
fluvio-controlplane-metadata = { version = "0.29.0", default-features = false, path = "crates/fluvio-controlplane-metadata" }
fluvio-extension-common = { path = "crates/fluvio-extension-common", default-features = false }
fluvio-hub-util = { path = "crates/fluvio-hub-util" }
fluvio-package-index = { version = "0.7.6", path = "crates/fluvio-package-index", default-features = false }
fluvio-protocol = { version = "0.11.0", path = "crates/fluvio-protocol" }
fluvio-sc-schema = { version = "0.24.0", path = "crates/fluvio-sc-schema", default-features = false }
fluvio-service = { path = "crates/fluvio-service" }
fluvio-smartengine = {  version = "0.8.0", path = "crates/fluvio-smartengine", default-features = false }
fluvio-smartmodule = { version = "0.7.4", path = "crates/fluvio-smartmodule", default-features = false }
fluvio-socket = { version = "0.14.9", path = "crates/fluvio-socket", default-features = false }
fluvio-spu-schema = { version = "0.16.0", path = "crates/fluvio-spu-schema", default-features  = false }
fluvio-storage = { path = "crates/fluvio-storage" }
fluvio-stream-dispatcher = { version = "0.13.2", path = "crates/fluvio-stream-dispatcher" }
fluvio-stream-model = { version = "0.11.3", path = "crates/fluvio-stream-model", default-features = false }
fluvio-types = { version = "0.5.0", path = "crates/fluvio-types", default-features = false }
fluvio-kv-storage = { path = "crates/fluvio-kv-storage", default-features = false }

# Used to make eyre faster on debug builds
# See https://github.com/yaahc/color-eyre#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

# Always optimize sha256, prevents slow `fluvio version`
[profile.dev.package.sha2]
opt-level = 3

# Used to preserve some linker hacks used by `inventory` crate
[profile.dev.package.fluvio-test]
incremental = false

# Make fluvio-test release package more like dev profile. Specifically for `inventory` crate
[profile.release.package.fluvio-test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = false
codegen-units = 256

[profile.release-lto]
inherits = "release"
lto = true
