[package]
name = "fluvio"
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["fluvio.io"]


[[bin]]
name = "fluvio"
path = "src/bin/main.rs"
doc = false


[dependencies]
log = "0.4.6"
dirs = "1.0.2"
bytes = "0.4.12"
structopt = { version = "0.2.14", default-features = false }
toml = "0.5.0"
prettytable-rs = "0.8.0"
rand = "0.6.0"
serde = { version ="1.0.82", features = ['derive'] }
serde_json = "1.0.39"
serde_yaml =  "0.8.8"
ctrlc = "3.1.3"
regex = "1.1.6"
futures-preview = { version = "0.3.0-alpha.17", features = ['nightly','async-await'] }
future-helper = { path = "../future-helper" }
kf-protocol = { path = "../kf-protocol"}
kf-socket = { path = "../kf-socket" }
sc-api = { path = "../api/sc-api"}
spu-api = { path = "../api/spu-api"}
utils = { path= "../utils"}
types = { path ="../types"}
k8-metadata = { path = "../k8-metadata"}
