[package]
edition = "2018"
name = "future-helper"
version = "0.2.0-alpha.1"
authors = ["fluvio.io"]
description = "friendly wrapper around rust future and tokio"

[features]
default = ["tokio1"]
fixture = ["async-test-derive"]
tokio2 = ["tokio_2"]
tokio1 = ["tokio_1","futures_1"]

[dependencies]
log = "0.4.8"
tokio_2 = { version = "0.2.0-alpha.1", package = "tokio", optional = true }
tokio_1 = { version = "0.1.18", package = "tokio", optional = true }
bytes = "0.4.12"
futures = { version = "0.3.1", features = ["compat"] }
futures_1 = { version = "0.1.25", package = "futures", optional = true }
pin-utils = "0.1.0-alpha.4"
async-test-derive = { path = "async-test-derive", optional = true }



[dev-dependencies]
lazy_static = "1.2.0"
utils = { path= "../utils"}
