[package]
edition = "2018"
name = "future-helper"
version = "0.2.1"
authors = ["fluvio.io"]
description = "friendly wrapper around rust future and tokio"

[features]
default = ["asyncstd"]
asyncstd = ["async-std"]
fixture = ["async-test-derive"]

[dependencies]
log = "0.4.8"
async-std = { version = "1.2.0", features = ["default","unstable"], optional=true }
futures-timer = "2.0.2"
bytes = "0.4.12"
futures = { version = "0.3.1"}
pin-utils = "0.1.0-alpha.4"
async-test-derive = { path = "async-test-derive", optional = true }


[dev-dependencies]
lazy_static = "1.2.0"
utils = { path= "../utils"}
