[package]
edition = "2018"
name = "k8-client"
version = "0.1.0-alpha.1"
authors = ["fluvio.io"]

[features]
k8 = []
k8_stream = ["k8"]


[dependencies]
log = "0.4.6"
bytes = "0.4.12"
http = "0.1.16"
hyper = "0.12.33"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"]}
pin-utils = "0.1.0-alpha.4"
rustls = { version = "0.15.2", features = ["dangerous_configuration"] }
webpki = "0.19"
hyper-rustls = "0.16.1"
serde = { version ="1.0.98", features = ['derive'] }
serde_json = "1.0.40"
serde_qs = "0.5.0"
k8-metadata = { path = "../k8-metadata"}
future-helper = { path = "../future-helper" }
k8-diff = { path = "../k8-diff"}
k8-config = { path = "../k8-config"}
types = { path = "../types"}

[dev-dependencies]
rand = "0.7.0"
k8-fixtures = { path = "k8-fixtures" }
lazy_static = "1.3.0"
future-helper = { path = "../future-helper", features=["fixture"]}
utils = { path = "../utils", features=["fixture"]}