[package]
edition = "2018"
name = "k8-client"
version = "0.2.1"
authors = ["fluvio.io"]

[features]
k8 = []
k8_stream = ["k8"]


[dependencies]
log = "0.4.6"
bytes = "0.4.12"
http = "0.1.16"
futures = { version = "0.3.1"}
isahc = { version = "0.8.1", features = ["json","static-curl"]}
curl = { version = "0.4.25", features = ["mesalink"]}
openssl-sys = { version = "0.9.43", features = ["vendored"] }
pin-utils = "0.1.0-alpha.4"
serde = { version ="1.0.98", features = ['derive'] }
serde_json = "1.0.40"
serde_qs = "0.5.0"
k8-metadata = { path = "../k8-metadata"}
future-helper = { path = "../future-helper" }
k8-diff = { path = "../k8-diff"}
k8-config = { path = "../k8-config"}
types = { path = "../types"}

[dev-dependencies]
rand = "0.7.0"
k8-fixtures = { path = "k8-fixtures" }
future-helper = { path = "../future-helper", features=["fixture"]}
utils = { path = "../utils", features=["fixture"]}