[package]
name = "k8-metadata"
version = "0.2.0-alpha.1"
authors = ["fluvio.io"]
edition = "2018"

[lib]
name = "k8_metadata"

[dependencies]
log = "0.4.6"
metadata-core = { path = "metadata-core"}
metadata-auth-token = { path = "metadata-auth-token"}
metadata-topic = { path = "metadata-topic"}
metadata-spu = { path = "metadata-spu"}
metadata-partition = { path = "metadata-partition"}
metadata-spg = { path = "metadata-spg"}