[package]
name = "kf-socket"
version = "0.2.1"
edition = "2018"
authors = ["fluvio.io"]

[[bin]]
name = "file_send"
path = "src/bin/file_send.rs"
doc = false
required-features = ["cli"]



[dependencies]
log = "0.4.6"
bytes = "0.4.12"
futures = { version = "0.3.1" }
pin-utils = "0.1.0-alpha.4"
chashmap = "2.2.0"
futures_codec = "0.3.1"
kf-protocol = { path = "../kf-protocol"}
future-aio = { path = "../future-aio"}
future-helper = { path = "../future-helper" }


[dev-dependencies]
utils = { path = "../utils", features = ["fixture"]}
future-helper = { path = "../future-helper", features = ["fixture"] }
