[package]
name = "sc-server"
edition = "2018"
version = "0.1.0-alpha.1"
authors = ["fluvio.io"]
default-run = "sc-server"


[[bin]]
name = "sc-server"
path = "src/main.rs"
doc = false


[dependencies]
rand = "0.5"
log = "0.4.6"
toml = "0.5.0"
serde = { version ="1.0.82", features = ['derive'] }
futures-preview = { version = "0.3.0-alpha.17" }
pin-utils = "0.1.0-alpha.3"
chashmap = "2.2.0"
structopt = "0.2.14"
base64 = "0.10.1"
regex = "1.1.6"
types = { path = "../types"}
utils = { path = "../utils"}
future-helper = { path = "../future-helper" }
k8-client = { path = "../k8-client"}
kf-protocol = { path = "../kf-protocol"}
kf-socket = {path = "../kf-socket"}
kf-service = { path = "../kf-service"}
internal-api = { path = "../api/internal-api"}
k8-metadata = { path = "../k8-metadata"}
k8-config = { path = "../k8-config"}
metadata = { path = "../metadata"}
sc-api = { path = "../api/sc-api"}

[dev-dependencies]
future-helper = { path = "../future-helper", features=["fixture"]}
future-aio = { path = "../future-aio"}
k8-fixtures = { path = "../k8-client/k8-fixtures" }
utils = { path = "../utils", features=["fixture"]}
