[package]
edition = "2018"
name = "storage"
version = "0.1.0-alpha.1"
authors = ["fluvio.io"]

[[bin]]
name = "storage-cli"
path = "src/bin/cli.rs"
doc = false
required-features = ["cli"]


[dependencies]
log = "0.4.6"
libc = "0.2.58"
bytes = "0.4.12"
futures-preview = { version = "0.3.0-alpha.13" }
pin-utils = "0.1.0-alpha.4"
structopt = { version = "0.2.14", optional = true}
serde = { version ="1.0.82", features = ['derive'] }
future-aio = { path = "../future-aio"}
kf-protocol = { path = "../kf-protocol"}
kf-socket = { path = "../kf-socket"}
future-helper = { path = "../future-helper" }
utils = { path= "../utils", optional = false }
types = { path= "../types"}


[dev-dependencies]
future-helper = { path = "../future-helper", features=["fixture"]}
utils = { path = "../utils", features = ["fixture"]}



[features]
cli = ["structopt"]