[package]
name = "cloud-sc-extra"
edition = "2021"
version = "0.0.0"
authors = ["fluvio.io"]
description = "Fluvio Stream Controller Cloud Portions"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true, features = ['derive'] }
anyhow = { workspace = true }

fluvio-controlplane = { workspace = true }
fluvio-controlplane-metadata = {  workspace = true, features = ["smartmodule"] }
fluvio-protocol = { workspace = true, features = [
    "api",
    "record",
    "link"
] }
fluvio-stream-model = { workspace = true }
fluvio-socket = { workspace = true }
