[package]
name = "json-test-connector"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Connector that generates JSON test data"
edition = "2024"
publish = false



[dependencies]
async-trait = { workspace = true }
futures = { version = "0.3", default-features = false }
anyhow = { workspace = true }
tokio = { default-features = false, features = ["time"], workspace = true }
serde = { default-features = false, features = ["derive"], workspace = true }

fluvio = { path = "../../crates/fluvio/", features = ["smartengine"]}
fluvio-connector-common = { path = "../../crates/fluvio-connector-common/", features = ["derive"] }

